--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,80 +1,80 @@
-name: Pipeline de CI/CD Portfolio
+name: CI-CD-Portfolio
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    [cite_start]branches: [ main ] # Dispara em PRs para a main [cite: 15, 16]
+    branches: [main]
 
-[cite_start]permissions: # Necessário para a Etapa 2 (CD) [cite: 37]
+permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # ETAPA 1 e 5: Validação (CI)
   lint-and-validate:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        [cite_start]node-version: [18, 20] # Estratégia de Matrix [cite: 49]
-    
+        node-version: [18, 20] # Etapa 5: Matrix Strategy
+
     steps:
       - name: Checkout do código
-        [cite_start]uses: actions/checkout@v4 [cite: 17]
+        uses: actions/checkout@v4
 
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          [cite_start]node-version: ${{ matrix.node-version }} [cite: 17, 49]
+          node-version: ${{ matrix.node-version }}
 
-      # Verificação do index.html [cite: 21, 22]
-      - name: Verificar existência do index.html
+      - name: 1. Verificar index.html na raiz
         run: |
           if [ ! -f index.html ]; then
-            echo "Erro: Arquivo index.html não encontrado na raiz!"
+            echo "ERRO: Arquivo index.html não encontrado!"
             exit 1
           fi
 
-      # Bloqueio de arquivos > 500KB 
-      - name: Verificar tamanho dos arquivos (Máx 500KB)
+      - name: 2. Bloquear arquivos > 500KB
         run: |
           files=$(find . -type f -not -path '*/.*' -size +500k)
           if [ -n "$files" ]; then
-            echo "Arquivos muito grandes encontrados: $files"
+            echo "Erro: Arquivos excedem 500KB: $files"
             exit 1
           fi
 
-      # Varredura de termos sensíveis e comentários 
-      - name: Varredura de termos proibidos (TODO, FIXME, senha)
+      - name: 3. Varredura de termos sensíveis e comentários
         run: |
           if grep -rEi "TODO|FIXME|senha|password" .; then
-            echo "Erro: Foram encontrados termos proibidos ou comentários de pendência."
+            echo "Erro: Foram encontrados termos Proibidos."
             exit 1
           fi
 
-      # Execução do Linter (HTML Hint) [cite: 28]
-      - name: Executar Linter HTML
+      - name: 4. Validar HTML (Linter)
         run: |
           npm install -g htmlhint
           htmlhint index.html
 
-      # Verificação de links e imagens [cite: 31]
-      # Nota: Aqui você pode usar uma ferramenta como o 'lychee' ou comandos curl
-      - name: Validar Links e Imagens
-        run: |
-          echo "Iniciando validação de URLs e caminhos..."
-          # Comandos de teste de integridade aqui
+      - name: 5. Validar Links e Imagens
+        uses: lycheeverse/lychee-action@v1.9.0
+        with:
+          args: --verbose --no-progress './**/*.html'
 
-  # ETAPA 2: Deploy (CD) - Só ocorre se o CI passar e for na branch main
   deploy:
     needs: lint-and-validate
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy para GitHub Pages
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
-      - name: Publicar Site
-        [cite_start]uses: actions/deploy-pages@v4 [cite: 33, 36]
+          path: "."
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
